--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,11 @@ name: Release
         required: false
         type: boolean
         default: false
-permissions:
-  contents: write
-  id-token: write
 jobs:
   build-release:
     name: Build Release Artifacts
+    permissions:
+      contents: read
     timeout-minutes: 60
     runs-on: "${{ matrix.os }}"
     strategy:
@@ -129,6 +128,9 @@ jobs:
         retention-days: 7
   create-release:
     name: Create Release
+    permissions:
+      contents: write
+      id-token: write
     needs: build-release
     # FIXME: Temporary; original runs-on preserved below
     # runs-on: ubuntu-latest
