fix(security): address workflow security vulnerabilities (#317)
* fix(security): address workflow security vulnerabilities

- Add ref input validation in nightly.yml to prevent code injection (BLOCKER)
- Move permissions to job level in release.yml for least-privilege (MAJOR)

Fixes SonarCloud security issues in workflow files.

* fix(security): use env block to prevent script injection

Pass user input via env: block instead of direct interpolation to prevent
command substitution attacks during variable assignment.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -49,11 +49,24 @@ jobs:
       DISABLE_SCAN_INPUT: ${{ github.event.inputs.disable_scan || 'false' }}
 
     steps:
+      - name: Validate ref input
+        shell: bash
+        env:
+          REF_INPUT: ${{ github.event.inputs.ref || 'main' }}
+        run: |
+          # Validate ref matches allowed patterns: branch names, tags, or SHAs
+          if [[ ! "$REF_INPUT" =~ ^[a-zA-Z0-9._/-]+$ ]] || [[ "$REF_INPUT" =~ \.\. ]]; then
+            echo "::error::Invalid ref format: $REF_INPUT"
+            exit 1
+          fi
+          echo "Validated ref: $REF_INPUT"
+          echo "VALIDATED_REF=$REF_INPUT" >> "$GITHUB_ENV"
+
       - name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.ref || 'main' }}
+          ref: ${{ env.VALIDATED_REF || github.event.inputs.ref || 'main' }}
 
       - name: Setup Java
         uses: actions/setup-java@v5
