--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,17 @@ jobs:
         java:
           - 17
     steps:
+    - name: Validate tag input
+      if: github.event.inputs.tag != ''
+      shell: bash
+      run: |
+        TAG="${{ github.event.inputs.tag }}"
+        # Validate tag matches expected version format (v1.2.3 or v1.2.3-rc.1 or vscode-groovy-v1.2.3)
+        if [[ ! "$TAG" =~ ^(v|vscode-groovy-v)?[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+          echo "::error::Invalid tag format: $TAG. Expected formats: v1.2.3, v1.2.3-rc.1, or vscode-groovy-v1.2.3"
+          exit 1
+        fi
+        echo "Tag validation passed: $TAG"
     - name: Checkout code
       uses: actions/checkout@v6
       with:
@@ -146,6 +157,17 @@ jobs:
     runs-on: ${{ (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && 'self-hosted' || (github.event.inputs.runner_label == 'local-macos' || vars.CI_RUNNER_LABEL == 'local-macos') && fromJSON('["self-hosted", "local-macos", "groovy-lsp"]') || (github.event.inputs.runner_label == 'magalu' || vars.CI_RUNNER_LABEL == 'magalu') && fromJSON('["self-hosted", "magalu", "groovy-lsp"]') || 'ubuntu-24.04' }}
     if: "${{ !inputs.dry_run }}"
     steps:
+    - name: Validate tag input
+      if: github.event.inputs.tag != ''
+      shell: bash
+      run: |
+        TAG="${{ github.event.inputs.tag }}"
+        # Validate tag matches expected version format (v1.2.3 or v1.2.3-rc.1 or vscode-groovy-v1.2.3)
+        if [[ ! "$TAG" =~ ^(v|vscode-groovy-v)?[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+          echo "::error::Invalid tag format: $TAG. Expected formats: v1.2.3, v1.2.3-rc.1, or vscode-groovy-v1.2.3"
+          exit 1
+        fi
+        echo "Tag validation passed: $TAG"
     - name: Checkout code
       uses: actions/checkout@v6
       with:
