fix(security): add tag validation to prevent script injection (#336)
* fix(security): add tag validation to prevent script injection

Add validation step before checkout in both build-release and create-release
jobs to validate the user-provided tag input matches expected version format.

This fixes SonarCloud BLOCKER vulnerability githubactions:S8263 which flagged
user-controlled data being used directly as the 'ref' parameter.

The validation regex accepts:
- v1.2.3 (standard version tags)
- v1.2.3-rc.1 (prerelease tags)
- vscode-groovy-v1.2.3 (VS Code extension tags)

Fixes: SonarCloud issues at lines 55 and 153

* fix(security): use env block to prevent script injection in validation step

Address Cursor bot feedback: the validation step itself was vulnerable because
${{ github.event.inputs.tag }} was interpolated directly into the run script.

Fix by passing the input via env: block and referencing $TAG_INPUT as a shell
variable. This ensures the input is treated as data, not code.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,18 @@ jobs:
         java:
           - 17
     steps:
+    - name: Validate tag input
+      if: github.event.inputs.tag != ''
+      shell: bash
+      env:
+        TAG_INPUT: ${{ github.event.inputs.tag }}
+      run: |
+        # Validate tag matches expected version format (v1.2.3 or v1.2.3-rc.1 or vscode-groovy-v1.2.3)
+        if [[ ! "$TAG_INPUT" =~ ^(v|vscode-groovy-v)?[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+          echo "::error::Invalid tag format: $TAG_INPUT. Expected formats: v1.2.3, v1.2.3-rc.1, or vscode-groovy-v1.2.3"
+          exit 1
+        fi
+        echo "Tag validation passed: $TAG_INPUT"
     - name: Checkout code
       uses: actions/checkout@v6
       with:
@@ -146,6 +158,18 @@ jobs:
     runs-on: ${{ (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && 'self-hosted' || (github.event.inputs.runner_label == 'local-macos' || vars.CI_RUNNER_LABEL == 'local-macos') && fromJSON('["self-hosted", "local-macos", "groovy-lsp"]') || (github.event.inputs.runner_label == 'magalu' || vars.CI_RUNNER_LABEL == 'magalu') && fromJSON('["self-hosted", "magalu", "groovy-lsp"]') || 'ubuntu-24.04' }}
     if: "${{ !inputs.dry_run }}"
     steps:
+    - name: Validate tag input
+      if: github.event.inputs.tag != ''
+      shell: bash
+      env:
+        TAG_INPUT: ${{ github.event.inputs.tag }}
+      run: |
+        # Validate tag matches expected version format (v1.2.3 or v1.2.3-rc.1 or vscode-groovy-v1.2.3)
+        if [[ ! "$TAG_INPUT" =~ ^(v|vscode-groovy-v)?[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+          echo "::error::Invalid tag format: $TAG_INPUT. Expected formats: v1.2.3, v1.2.3-rc.1, or vscode-groovy-v1.2.3"
+          exit 1
+        fi
+        echo "Tag validation passed: $TAG_INPUT"
     - name: Checkout code
       uses: actions/checkout@v6
       with:
